tests/baselines/reference/scannerNumericLiteral9.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral9.ts(1,1): error TS1489: Decimals with leading zeros are not allowed.


==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral9.ts (1 errors) ====
    009
    ~~~
!!! error TS1489: Decimals with leading zeros are not allowed.